--- a/Views/DogReservations/Index.cshtml
+++ b/Views/DogReservations/Index.cshtml
@@ -16,19 +16,19 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td><strong>@Html.DisplayNameFor(model => item.OwnerName):</strong></td>
+                <td><u>@Html.DisplayNameFor(model => item.OwnerName):</u></td>
                 <td>@Html.DisplayFor(modelItem => item.OwnerName)</td>
             </tr>
             <tr>
-                <td><strong>@Html.DisplayNameFor(model => item.DogName):</strong></td>
+                <td><u>@Html.DisplayNameFor(model => item.DogName):</u></td>
                 <td>@Html.DisplayFor(modelItem => item.DogName)</td>
             </tr>
             <tr>
-                <td><strong>@Html.DisplayNameFor(model => item.CheckInDate):</strong></td>
+                <td><u>@Html.DisplayNameFor(model => item.CheckInDate):</u></td>
                 <td>@Html.DisplayFor(modelItem => item.CheckInDate)</td>
             </tr>
             <tr>
-                <td><strong>@Html.DisplayNameFor(model => item.CheckOutDate):</strong></td>
+                <td><u>@Html.DisplayNameFor(model => item.CheckOutDate):</u></td>
                 <td>@Html.DisplayFor(modelItem => item.CheckOutDate)</td>
             </tr>
             <tr>
