--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
     <footer class="border-top footer fw-bold text-center">
         <div class="container" style="color:ghostwhite; font-family:Garamond">
             <img src="https://as2.ftcdn.net/v2/jpg/02/75/19/67/1000_F_275196731_aFVN6R7M2CipYdQXyUAMUMtqMuQ5IoJi.jpg" class="rounded mx-auto d-block" id="logo" alt="dog with tongue out" width="70" height="70" />
-            &copy; 2024 - TheMaxieInn
+            &copy; 2024  TheMaxieInn
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
