--- a/Views/DogReservations/Delete.cshtml
+++ b/Views/DogReservations/Delete.cshtml
@@ -124,6 +124,13 @@
         </dd>
         <hr />
         <dt class="col-sm-6">
+            Accommodation Details
+        </dt>
+        <dd class="col-sm-6">
+            @Html.DisplayFor(model => model.AccommodationDetails)
+        </dd>
+        <hr />
+        <dt class="col-sm-6">
             Total Reservation Cost
         </dt>
         <dd class="col-sm-6">
